Update the code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
+[package]
+name = "linear_regression_model"
+version = "0.1.0"
+edition = "2024"
+
 [dependencies]
 burn = { version = "0.16.0", features = ["wgpu","train"]}
 burn-ndarray = "0.16.0"
